# cudarrays

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure
include/: CMakeLists.txt
include/cudarrays/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt  array.hpp  coherence.hpp  common.hpp  compiler.hpp  compute.hpp  config.hpp  config.hpp.in  dim_manager.hpp  dist_storage_replicated.hpp  dist_storage_reshape-block.hpp  dist_storage_reshape-block_cyclic.hpp  dist_storage_reshape-cyclic.hpp  dist_storage_vm.hpp  dynarray.hpp  dynarray_view.hpp  env.hpp  gpu.cuh  host.hpp  indexing.hpp  integral_iterator.hpp  iterator.hpp  launch.hpp  launch_cpu.hpp  log.hpp  memory.hpp  static_array.hpp  storage.hpp  storage_impl.hpp  storage_traits.hpp  system.hpp  trace.hpp  traits.hpp  types.hpp  utils.hpp
include/cudarrays/.ropeproject/: globalnames
include/cudarrays/detail/coherence/: default.hpp
include/cudarrays/detail/dynarray/: base.hpp  dim_iterator.hpp  dim_manager.hpp  helpers.hpp  indexing.hpp  iterator.hpp  storage_replicated.hpp  storage_reshape-block.hpp  storage_reshape-block_cyclic.hpp  storage_reshape-cyclic.hpp  storage_vm.hpp
include/cudarrays/detail/utils/: base.hpp  bitset.hpp  env.hpp  integral_iterator.hpp  log.hpp  misc.hpp  option.hpp  permute.hpp  seq.hpp  stl.hpp
lib/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt  compiler.cpp  cuda_vars.cu  global_vars.cpp  host.cpp  main.cpp  memory.cpp  system.cpp
scripts/travis/: build.sh  install_build_env.sh
tests/: .ycm_extra_conf.py  CMakeLists.txt
tests/simple/: .ycm_extra_conf.py  CMakeLists.txt  alloc.cpp  array.cu  common.hpp  default.cu  host.cpp  inc.cu  inc_kernel.cuh  matrixadd.cu  matrixadd_kernel.cuh  matrixmul.cu  matrixmul_kernel.cuh  saxpy.cu  saxpy_kernel.cuh  static.cu  stencil.cu  stencil_kernel.cuh  storage_type.cpp  vecadd.cu  vecadd_kernel.cuh
tests/unit/: .ycm_extra_conf.py  CMakeLists.txt  UnitTests.cpp  common.cpp  common.hpp  iterator.cpp  lib_storage.cpp  seq.cpp  storage.cpp  traits.cpp  utils.cpp
